front end fixed

--- a/cea/default.config
+++ b/cea/default.config
@@ -740,19 +740,17 @@ filter-buildings-by-year-end.type = IntegerParameter
 filter-buildings-by-year-end.nullable = true
 filter-buildings-by-year-end.help = Enforce a filer to further select buildings built in or before this year. Ensure year-end is the same or after year-start. Leave blank to ignore the upper bound when filtering by the year of construction.
 
-filter-buildings-by-standard =
-filter-buildings-by-standard.type = ColumnMultiChoiceParameter
-filter-buildings-by-standard.help = Enforce a filter to further select buildings by one or more construction_standards (archetypes). Leave blank to select all.
-filter-buildings-by-standard.locator = get_database_construction_standards
-filter-buildings-by-standard.sheet = STANDARD_DEFINITION
-filter-buildings-by-standard.column = STANDARD
+filter-buildings-by-construction-type =
+filter-buildings-by-construction-type.type = ColumnMultiChoiceParameter
+filter-buildings-by-construction-type.help = Enforce a filter to further select buildings by one or more construction (arche)types. Leave blank to select all.
+filter-buildings-by-construction-type.locator = get_database_archetypes_construction_type
+filter-buildings-by-construction-type.column = const_type
 
 filter-buildings-by-use-type =
 filter-buildings-by-use-type.type = ColumnMultiChoiceParameter
 filter-buildings-by-use-type.help = Enforce a filter to further select buildings by one or more use_types (archetypes). For mixed-use buildings, CEA filers by the main use (i.e., the use type with the highest ratio among all use types of a building). Leave blank to select all.
-filter-buildings-by-use-type.locator = get_database_use_types_properties
-filter-buildings-by-use-type.sheet = INDOOR_COMFORT
-filter-buildings-by-use-type.column = code
+filter-buildings-by-use-type.locator = get_database_archetypes_use_type
+filter-buildings-by-use-type.column = use_type
 
 min-ratio-as-main-use = 0
 min-ratio-as-main-use.type= RealParameter
