--- a/cea/default.config
+++ b/cea/default.config
@@ -466,7 +466,7 @@ include-zone.category = Detailed Settings
 
 include-site = True
 include-site.type = BooleanParameter
-include-site.help = True to export and include the polygon drawn on the map of the Create-Scenario Wizard.
+include-site.help = True to export and include the polygon drawn on the map of the Create-Scenario Wizard, if any.
 include-site.category = Detailed Settings
 
 include-surroundings = True
@@ -476,13 +476,23 @@ include-surroundings.category = Detailed Settings
 
 include-streets = True
 include-streets.type = BooleanParameter
-include-streets.help = True to export and include Streets information.
+include-streets.help = True to export and include Streets information, if any.
 include-streets.category = Detailed Settings
 
 include-trees = True
 include-trees.type = BooleanParameter
-include-trees.help = True to export and include Trees information.
+include-trees.help = True to export and include Trees information, if any.
 include-trees.category = Detailed Settings
+
+include-district-heating-network = True
+include-district-heating-network.type = BooleanParameter
+include-district-heating-network.help = True to export and include District Heating Network information, if any.
+include-district-heating-network.category = Detailed Settings
+
+include-district-cooling-network = True
+include-district-cooling-network.type = BooleanParameter
+include-district-cooling-network.help = True to export and include District Cooling Network information, if any.
+include-district-cooling-network.category = Detailed Settings
 
 
 [from-rhino-gh]
