Use migration script in test workflow

--- a/cea/tests/workflows/sg_cooling.yml
+++ b/cea/tests/workflows/sg_cooling.yml
@@ -8,6 +8,9 @@
     case: open
 - config: .
   "general:scenario-name": baseline
+- script: cea4-format-helper
+  parameters:
+    scenarios-to-verify-and-migrate: [baseline]
 
 - script: database-helper
   parameters:
