Update to not use cache for Windows
Windows has slower filesystem operations with many small files. Fresh installation on Windows could be faster than using cache.

--- a/.github/workflows/pull.request.yml
+++ b/.github/workflows/pull.request.yml
@@ -58,7 +58,7 @@ jobs:
         with:
           environment-file: conda-lock.yml
           environment-name: cea
-          cache-environment: true
+          cache-environment: ${{ runner.os != 'Windows' }}
 
       - name: Install CEA
         shell: bash -l {0}
