--- a/cea/default.config
+++ b/cea/default.config
@@ -388,17 +388,17 @@ buildings =
 buildings.type = BuildingsParameter
 buildings.help = List of buildings considered for the photovoltaic (PV), photovoltaic thermal (PVT) and solar collector (SC) simulations (to simulate all buildings leave blank).
 
-type-pvpanel = PV1
-type-pvpanel.type = ColumnChoiceParameter
-type-pvpanel.help = Type of PV panel.
+type-pvpanel =
+type-pvpanel.type = ColumnMultiChoiceParameter
+type-pvpanel.help = Type(s) of PV panels. Leave blank to simulate all types.
 type-pvpanel.locator = get_db4_components_conversion_conversion_technology_csv
 type-pvpanel.column = code
 type-pvpanel.kwargs = conversion_technology=PHOTOVOLTAIC_PANELS
 
-type-scpanel = FP
-type-scpanel.type = ChoiceParameter
+type-scpanel = FP, ET
+type-scpanel.type = MultiChoiceParameter
 type-scpanel.choices = FP, ET
-type-scpanel.help = Type of solar collector: "FP" (Flat-plate) or "ET" (Evacuated-tubes).
+type-scpanel.help = Type of solar collector: "FP" (Flat-plate) or "ET" (Evacuated-tubes). Leave blank to simulate both types.
 
 panel-on-roof = True
 panel-on-roof.type = BooleanParameter
