--- a/cea/default.config
+++ b/cea/default.config
@@ -779,7 +779,7 @@ period-start-date.help = Define the start date (24 hours all-inclusive) of a tim
 period-end-date = 31, Dec
 period-end-date.type = MultiChoiceParameter
 period-end-date.choices = 01,02,03,04,05,06,07,08,09,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,Jan,Feb,Mar,Apr,May,Jun,Jul,Aug,Sep,Oct,Nov,Dec
-period-end-date.help = Define the start date (24 hours all-inclusive) of a time period for aggregation. Select one number and one month only. Ensure the combination is an actual date. CEA does not consider 29 Feb in a leap year. When end-date before start-date, CEA consider the time period between the start-date and the end-date in the year after. When end-date is the same as start-date, CEA considers the 24 hours of this date.
+period-end-date.help = Define the end date (24 hours all-inclusive) of a time period for aggregation. Select one number and one month only. Ensure the combination is an actual date. CEA does not consider 29 Feb in a leap year. When end-date is before start-date, CEA consider the time period between the start-date and the end-date in the year after. When end-date is the same as start-date, CEA considers the 24 hours of this date.
 
 metrics-building-energy-demand = true
 metrics-building-energy-demand.type = BooleanParameter
