hide selecting specific buildings as customisation in solar technologies

--- a/cea/default.config
+++ b/cea/default.config
@@ -384,10 +384,6 @@ case.choices = open, heating, cooling, WTP
 case.help = Reference case to extract.
 
 [solar]
-buildings =
-buildings.type = BuildingsParameter
-buildings.help = List of buildings considered for the photovoltaic (PV), photovoltaic thermal (PVT) and solar collector (SC) simulations (to simulate all buildings leave blank).
-
 type-pvpanel =
 type-pvpanel.type = ColumnMultiChoiceParameter
 type-pvpanel.help = Type(s) of PV panels. Leave blank to simulate all types.
@@ -440,6 +436,11 @@ custom-tilt-angle.help = Calculate solar panel potential based on a user-specifi
 panel-tilt-angle = 10
 panel-tilt-angle.type = RealParameter
 panel-tilt-angle.help = Solar panel tilt angle if using user-defined tilt angle.
+
+buildings =
+buildings.type = BuildingsParameter
+buildings.help = List of buildings considered for the photovoltaic (PV), photovoltaic thermal (PVT) and solar collector (SC) simulations (to simulate all buildings leave blank).
+solar-window-solstice.category = Customisation
 
 [dbf-tools]
 #converter of dbf to csv(xlsx) vice versa
