--- a/cea/default.config
+++ b/cea/default.config
@@ -440,7 +440,7 @@ panel-tilt-angle.help = Solar panel tilt angle if using user-defined tilt angle.
 buildings =
 buildings.type = BuildingsParameter
 buildings.help = List of buildings considered for the photovoltaic (PV), photovoltaic thermal (PVT) and solar collector (SC) simulations (to simulate all buildings leave blank).
-solar-window-solstice.category = Customisation
+buildings.category = Customisation
 
 [dbf-tools]
 #converter of dbf to csv(xlsx) vice versa
