--- a/cea/default.config
+++ b/cea/default.config
@@ -812,15 +812,10 @@ metrics-photovoltaic-thermal-panels.type = BooleanParameter
 metrics-photovoltaic-thermal-panels.help = Metrics to calculate: PVT installed area total[m2], PVT electricity total[kWh], PVT heat total[kWh], PVT installed area roof[m2], PVT electricity roof[kWh], PVT heat roof[kWh], PVT installed area north[m2], PVT electricity north[kWh], PVT heat north[kWh], PVT installed area south[m2], PVT electricity south[kWh], PVT heat south[kWh], PVT installed area east[m2], PVT electricity east[kWh], PVT heat east[kWh], PVT installed area west[m2], PVT electricity west[kWh], PVT heat west[kWh]. PVT = photovoltaic-thermal panels.
 metrics-photovoltaic-thermal-panels.category = Metrics
 
-metrics-solar-collectors-et = true
-metrics-solar-collectors-et.type = BooleanParameter
-metrics-solar-collectors-et.help = Metrics to calculate: SC_ET installed area total[m2], SC_ET heat total[kWh], SC_ET installed area roof[m2], SC_ET heat roof[kWh], SC_ET installed area north[m2], SC_ET heat north[kWh], SC_ET installed area south[m2], SC_ET heat south[kWh], SC_ET installed area east[m2], SC_ET heat east[kWh], SC_ET installed area west[m2], SC_ET heat west[kWh]. ET = evacuated tube. SC = solar collector.
-metrics-solar-collectors-et.category = Metrics
-
-metrics-solar-collectors-fp = true
-metrics-solar-collectors-fp.type = BooleanParameter
-metrics-solar-collectors-fp.help = Metrics to calculate: SC_FP installed area total[m2], SC_FP heat total[kWh],SC_FP installed area roof[m2], SC_FP heat roof[kWh], SC_FP installed area north[m2], SC_FP heat north[kWh], SC_FP installed area south[m2], SC_FP heat south[kWh], SC_FP installed area east[m2],SC_FP heat east[kWh], SC_FP installed area west[m2], SC_FP heat west[kWh]. FP = flat plate. SC = solar collector.
-metrics-solar-collectors-fp.category = Metrics
+metrics-solar-collectors = true
+metrics-solar-collectors.type = BooleanParameter
+metrics-solar-collectors.help = Metrics to calculate: SC installed area total[m2], SC heat total[kWh], SC installed area roof[m2], SC heat roof[kWh], SC installed area north[m2], SC heat north[kWh], SC installed area south[m2], SC heat south[kWh], SC installed area east[m2], SC heat east[kWh], SC installed area west[m2], SC heat west[kWh]. SC = solar collectors.
+metrics-solar-collectors.category = Metrics
 
 metrics-other-renewables = true
 metrics-other-renewables.type = BooleanParameter
