Refactor mock usage and update dependencies in documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = []
 
 [project.optional-dependencies]
 dev = ["pytest"]
-docs = ["setuptools", "mock"]
+docs = ["setuptools"]
 
 [project.urls]
 "Homepage" = "https://cityenergyanalyst.com"
