operation to operational

--- a/cea/default.config
+++ b/cea/default.config
@@ -369,9 +369,9 @@ embodied = true
 embodied.type = BooleanParameter
 embodied.help = Estimate emissions due to construction and dismantling of buildings (allocated according to the age input database, LCA database and building geometry)
 
-operation = true
-operation.type = BooleanParameter
-operation.help = Estimate emissions due to supply systems operation (allocated according to the supply-systems input database)
+operational = true
+operational.type = BooleanParameter
+operational.help = Estimate emissions due to supply systems operation (allocated according to the supply-systems input database)
 
 [extract-reference-case]
 destination = {general:scenario}/../..
