--- a/cea/default.config
+++ b/cea/default.config
@@ -787,15 +787,10 @@ metrics-building-energy-demand.type = BooleanParameter
 metrics-building-energy-demand.help = Metrics to calculate: grid electricity consumption[kWh], enduse electricity demand[kWh], enduse cooling demand[kWh], enduse space cooling demand[kWh], enduse heating demand[kWh], enduse space heating demand[kWh], enduse dhw demand[kWh]. dhw = domestic hot water.
 metrics-building-energy-demand.category = Metrics
 
-metrics-embodied-emissions = true
-metrics-embodied-emissions.type = BooleanParameter
-metrics-embodied-emissions.help = Metrics to calculate: embodied emissions building construction[tonCO2-eq/yr]. This category only supports annual aggregation.
-metrics-embodied-emissions.category = Metrics
-
-metrics-operation-emissions = true
-metrics-operation-emissions.type = BooleanParameter
-metrics-operation-emissions.help = Metrics to calculate: operation emissions[tonCO2-eq/yr], operation emissions grid[tonCO2-eq/yr]. This category only supports annual aggregation.
-metrics-operation-emissions.category = Metrics
+metrics-emissions = true
+metrics-emissions.type = BooleanParameter
+metrics-emissions.help = Metrics to calculate: embodied emissions building construction[tonCO2-eq/yr], operation emissions[tonCO2-eq/yr], operation emissions grid[tonCO2-eq/yr]. This category only supports annual aggregation.
+metrics-emissions.category = Metrics
 
 metrics-solar-irradiation = true
 metrics-solar-irradiation.type = BooleanParameter
