Squashed commit of the following:
commit ba7e340f628924b07dc12a7ec57c4ee449bff9d1
Author: Zhongming Shi <dutszm@hotmail.com>
Date:   Fri Mar 7 13:50:16 2025 +0100

    Update scripts.yml

commit ef83c156218ab64b0c1ac6490a05b0b2afe4735b
Author: Reynold Mok <34395415+reyery@users.noreply.github.com>
Date:   Fri Mar 7 13:30:08 2025 +0100

    Delete calc_tm.pyd

commit 113186094f0d8f0c7dd6d7512f089bc9ba9d21f9
Merge: 9bab40390 b3bb1fd4a
Author: Reynold Mok <34395415+reyery@users.noreply.github.com>
Date:   Thu Mar 6 21:04:24 2025 +0100

    Merge pull request #3763 from architecture-building-systems/3282-solar-angle

    Fix PV potential calculation based on tilt angle

commit b3bb1fd4ac251bdbb3cf7c463e7c1b0548a373cb
Author: Reynold Mok <34395415+reyery@users.noreply.github.com>
Date:   Thu Mar 6 19:43:34 2025 +0100

    Fix how groups are being counted

commit 93e800edacd144847c5230709dad33e06c637ae8
Author: Reynold Mok <34395415+reyery@users.noreply.github.com>
Date:   Thu Mar 6 16:39:34 2025 +0100

    Assign category to a number instead of None

    Using None, would cause numpy to raise TypeError in later functions. So we explicitly cast it to Categorical type first.

commit 6435d2e8447e6c36d7a8da5c8e0ec1a6b014fd68
Author: Reynold Mok <34395415+reyery@users.noreply.github.com>
Date:   Thu Mar 6 15:24:07 2025 +0100

    Add changes back after merge commit

commit 6a6e6024896b6c24c01b657a97768c1af24f479c
Merge: f95f39fd4 9bab40390
Author: Reynold Mok <34395415+reyery@users.noreply.github.com>
Date:   Thu Mar 6 14:40:23 2025 +0100

    Merge branch 'release-4.0' into 3282-solar-angle

commit 9bab403901b96eb82c9e286b88c96d56d2bbd210
Merge: 2c483f115 01ac1a827
Author: Zhongming Shi <shi@arch.ethz.ch>
Date:   Wed Mar 5 18:11:24 2025 +0100

    Merge pull request #3784 from architecture-building-systems/add-job-db

    Add job database to persist job information

commit 2c483f115c78abd14bfb0c27a6cbb514fd8886fe
Merge: 89801034d a2803f05a
Author: Zhongming Shi <shi@arch.eth

--- a/cea/default.config
+++ b/cea/default.config
@@ -435,7 +435,7 @@ max-roof-coverage.help = Maximum panel coverage [m2/m2] of roof surfaces that re
 
 custom-tilt-angle = False
 custom-tilt-angle.type = BooleanParameter
-custom-tilt-angle.help = Calculate solar panel potential based on a user-specified panel tilt angle. If False, the optimal tilt angle will be used for the calculation.
+custom-tilt-angle.help = Calculate solar panel potential based on a user-specified panel tilt angle. If False, the tilt angle offering the highest yield per m2 of PV panel will be used for the calculation. However, since self-shading is automatically prevented, this might increase the distance between panel rows and lead to a smaller yield per m2 of roof area.
 
 panel-tilt-angle = 10
 panel-tilt-angle.type = RealParameter
@@ -779,7 +779,7 @@ period-start-date.help = Define the start date (24 hours all-inclusive) of a tim
 period-end-date = 31, Dec
 period-end-date.type = MultiChoiceParameter
 period-end-date.choices = 01,02,03,04,05,06,07,08,09,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,Jan,Feb,Mar,Apr,May,Jun,Jul,Aug,Sep,Oct,Nov,Dec
-period-end-date.help = Define the start date (24 hours all-inclusive) of a time period for aggregation. Select one number and one month only. Ensure the combination is an actual date. CEA does not consider 29 Feb in a leap year. When end-date before start-date, CEA consider the time period between the start-date and the end-date in the year after. When end-date is the same as start-date, CEA considers the 24 hours of this date.
+period-end-date.help = Define the end date (24 hours all-inclusive) of a time period for aggregation. Select one number and one month only. Ensure the combination is an actual date. CEA does not consider 29 Feb in a leap year. When end-date is before start-date, CEA consider the time period between the start-date and the end-date in the year after. When end-date is the same as start-date, CEA considers the 24 hours of this date.
 
 metrics-building-energy-demand = true
 metrics-building-energy-demand.type = BooleanParameter
@@ -1683,6 +1683,10 @@ port.help = PORT of the CEA Server (the cea dashboard command will listen to thi
 browser = false
 browser.type = BooleanParameter
 browser.help = Launch GUI in the browser
+
+dev = false
+dev.type = BooleanParameter
+dev.help = Launch server in development mode (reloads on file changes)
 
 [schemas]
 locator-method = get_zone_geometry
