--- a/.github/workflows/setup_build.yml
+++ b/.github/workflows/setup_build.yml
@@ -36,9 +36,10 @@ jobs:
             setup/dependencies/micromamba.exe
           key: ${{ runner.os }}-${{ hashFiles('conda-lock.yml') }}-env
       
-      - uses: mamba-org/setup-micromamba@v1
+      - uses: mamba-org/setup-micromamba@v2
         if: steps.cache-env.outputs.cache-hit != 'true'
         with:
+          micromamba-version: '2.0.7-0'
           environment-file: conda-lock.yml
           environment-name: cea
           cache-environment: true
@@ -135,9 +136,9 @@ jobs:
         run: |
           cd gui
           mkdir -p ./dependencies/arm64
-          curl -Ls https://micro.mamba.pm/api/micromamba/osx-arm64/1.5.10 | tar -xvj -C ./dependencies/arm64 --strip-components=1 bin/micromamba
+          curl -Ls https://micro.mamba.pm/api/micromamba/osx-arm64/2.0.7 | tar -xvj -C ./dependencies/arm64 --strip-components=1 bin/micromamba
           mkdir -p ./dependencies/x64
-          curl -Ls https://micro.mamba.pm/api/micromamba/osx-64/1.5.10 | tar -xvj -C ./dependencies/x64 --strip-components=1 bin/micromamba 
+          curl -Ls https://micro.mamba.pm/api/micromamba/osx-64/2.0.7 | tar -xvj -C ./dependencies/x64 --strip-components=1 bin/micromamba 
 
       - name: Save Apple API Key secret to file
         env:
