Cache windows env during tests

--- a/.github/workflows/pull.request.yml
+++ b/.github/workflows/pull.request.yml
@@ -58,7 +58,7 @@ jobs:
         with:
           environment-file: conda-lock.yml
           environment-name: cea
-          cache-environment: ${{ runner.os != 'Windows' }}
+          cache-environment: true
 
       - name: Install CEA
         shell: bash -l {0}
