config-plot-bar-demand

--- a/cea/default.config
+++ b/cea/default.config
@@ -1708,3 +1708,100 @@ yarn.help = Path to the yarn.cmd file (e.g. C:\Users\darthoma\AppData\Roaming\np
 release-version =
 release-version.type = StringParameter
 release-version.help = Version number for new release in Semantic Versioning format (e.g., 1.0.0)
+
+[plots-bar-demand]
+Y-metric-to-plot = end_use
+Y-metric-to-plot.type = ChoiceParameter
+Y-metric-to-plot.choices = end_use, final_use
+Y-metric-to-plot.help = Select the metric to plot for the Y-axis
+
+Y-metric-unit = MWh
+Y-metric-unit.type = ChoiceParameter
+Y-metric-unit.choices = MWh, kWh, Wh
+Y-metric-unit.help = Select the unit of the metric to plot for the Y-axis
+
+Y-normalised-by = gross_floor_area,
+Y-normalised-by.type = ChoiceParameter
+Y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
+Y-normalised-by.help = Select the normalisation factor
+
+Y-min =
+Y-min.type = RealParameter
+Y-min.nullable = true
+Y-min.help = Set the minimum value for the Y-axis
+Y-min.category = Y-axis settings
+
+Y-max =
+Y-max.type = RealParameter
+Y-max.nullable = true
+Y-max.help = Set the maximum value for the Y-axis
+Y-max.category = Y-axis settings
+
+Y-step =
+Y-step.type = RealParameter
+Y-step.nullable = true
+Y-step.help = Set the step size for the Y-axis
+Y-step.category = Y-axis settings
+
+Y-label =
+Y-label.type = StringParameter
+Y-label.nullable = true
+Y-label.help = Customise the label for the Y-axis
+Y-label.category = Y-axis settings
+
+X-to-plot = by_building
+X-to-plot.type = ChoiceParameter
+X-to-plot.choices = by_district, by_building, by_time_period_hourly, by_time_period_daily, by_time_period_monthly, by_time_period_seasonal, by_time_period_annually_or_selected
+X-to-plot.help = Select the column to plot on the X-axis
+
+X-faceted = no_facet
+X-faceted.type = ChoiceParameter
+X-faceted.choices = no_facet, by_months, by_seasons
+X-faceted.help = Select the faceting method for the X-axis
+X-faceted.category = X-axis settings
+
+X-label =
+X-label.type = StringParameter
+X-label.nullable = true
+X-label.help = Customise the label for the X-axis
+X-label.category = X-axis settings
+
+buildings =
+buildings.type = BuildingsParameter
+buildings.help = List of buildings selected for result summary. Leave blank when to select all.
+buildings.category = Filter by buildings
+
+filter-buildings-by-year-start = 1900
+filter-buildings-by-year-start.type = IntegerParameter
+filter-buildings-by-year-start.nullable = true
+filter-buildings-by-year-start.help = Enforce a filer to further select buildings built in or after this year. Leave blank to ignore the lower bound when filtering by the year of construction.
+filter-buildings-by-year-start.category = Filter by buildings
+
+filter-buildings-by-year-end = 2050
+filter-buildings-by-year-end.type = IntegerParameter
+filter-buildings-by-year-end.nullable = true
+filter-buildings-by-year-end.help = Enforce a filer to further select buildings built in or before this year. Ensure year-end is the same or after year-start. Leave blank to ignore the upper bound when filtering by the year of construction.
+filter-buildings-by-year-end.category = Filter by buildings
+
+filter-buildings-by-construction-type =
+filter-buildings-by-construction-type.type = ColumnMultiChoiceParameter
+filter-buildings-by-construction-type.help = Enforce a filter to further select buildings by one or more construction (arche)types. Leave blank to select all.
+filter-buildings-by-construction-type.locator = get_database_archetypes_construction_type
+filter-buildings-by-construction-type.column = const_type
+filter-buildings-by-construction-type.category = Filter by buildings
+
+filter-buildings-by-use-type =
+filter-buildings-by-use-type.type = ColumnMultiChoiceParameter
+filter-buildings-by-use-type.help = Enforce a filter to further select buildings by one or more use_types (archetypes). For mixed-use buildings, CEA filers by the main use (i.e., the use type with the highest ratio among all use types of a building). Leave blank to select all.
+filter-buildings-by-use-type.locator = get_database_archetypes_use_type
+filter-buildings-by-use-type.column = use_type
+filter-buildings-by-use-type.category = Filter by buildings
+
+min-ratio-as-main-use = 0
+min-ratio-as-main-use.type= RealParameter
+min-ratio-as-main-use.help= Set the minimum threshold (inclusive) for a use type to be considered as the main use of a building. A valid value ranges from 0 to 1.
+min-ratio-as-main-use.category = Filter by buildings
+
+transposed = False
+transposed.type = BooleanParameter
+transposed.help = True to transpose the table
