--- a/cea/default.config
+++ b/cea/default.config
@@ -1768,19 +1768,19 @@ X-label.category = X-axis settings
 
 buildings =
 buildings.type = BuildingsParameter
-buildings.help = List of buildings selected for result summary. Leave blank when to select all.
+buildings.help = List of buildings selected to plot. Leave blank when to select all.
 buildings.category = Filter by buildings
 
 filter-buildings-by-year-start = 1900
 filter-buildings-by-year-start.type = IntegerParameter
 filter-buildings-by-year-start.nullable = true
-filter-buildings-by-year-start.help = Enforce a filer to further select buildings built in or after this year. Leave blank to ignore the lower bound when filtering by the year of construction.
+filter-buildings-by-year-start.help = Enforce a filter to further select buildings built in or after this year. Leave blank to ignore the lower bound when filtering by the year of construction.
 filter-buildings-by-year-start.category = Filter by buildings
 
 filter-buildings-by-year-end = 2050
 filter-buildings-by-year-end.type = IntegerParameter
 filter-buildings-by-year-end.nullable = true
-filter-buildings-by-year-end.help = Enforce a filer to further select buildings built in or before this year. Ensure year-end is the same or after year-start. Leave blank to ignore the upper bound when filtering by the year of construction.
+filter-buildings-by-year-end.help = Enforce a filter to further select buildings built in or before this year. Ensure year-end is the same or after year-start. Leave blank to ignore the upper bound when filtering by the year of construction.
 filter-buildings-by-year-end.category = Filter by buildings
 
 filter-buildings-by-construction-type =
