--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -596,3 +596,17 @@ Development:
     interfaces: [ dev ]
     module: cea.dev.update_zenodo
     parameters: []
+
+
+Visualisation:
+
+  - name: plot-bar-demand
+    label: Bar chart - demand
+    description: This Feature plots bar chart of the results of building energy demand forecasting
+    interfaces: [cli, dashboard]
+    module: cea.visualisation.f_main
+    parameters: ['general:scenario', plots-bar-demand]
+    input-files:
+      - [get_total_demand]
+      - [get_building_architecture]
+      - [get_zone_geometry]
