--- a/cea/default.config
+++ b/cea/default.config
@@ -749,13 +749,13 @@ filter-buildings-by-year-end.help = Enforce a filer to further select buildings 
 
 filter-buildings-by-construction-type =
 filter-buildings-by-construction-type.type = ColumnMultiChoiceParameter
-filter-buildings-by-construction-type.help = Enforce a filter to further select buildings by one or more construction (arche)types. Leave blank to select all.
+filter-buildings-by-construction-type.help = Enforce a filter to further select buildings by one or more construction_type archetypes. Leave blank to select all.
 filter-buildings-by-construction-type.locator = get_database_archetypes_construction_type
 filter-buildings-by-construction-type.column = const_type
 
 filter-buildings-by-use-type =
 filter-buildings-by-use-type.type = ColumnMultiChoiceParameter
-filter-buildings-by-use-type.help = Enforce a filter to further select buildings by one or more use_types (archetypes). For mixed-use buildings, CEA filers by the main use (i.e., the use type with the highest ratio among all use types of a building). Leave blank to select all.
+filter-buildings-by-use-type.help = Enforce a filter to further select buildings by one or more use_type (archetypes). For mixed-use buildings, CEA filers by the main use (i.e., the use type with the highest ratio among all use types of a building). Leave blank to select all.
 filter-buildings-by-use-type.locator = get_database_archetypes_use_type
 filter-buildings-by-use-type.column = use_type
 
@@ -1710,6 +1710,11 @@ release-version.type = StringParameter
 release-version.help = Version number for new release in Semantic Versioning format (e.g., 1.0.0)
 
 [plots-bar-demand]
+
+buildings =
+buildings.type = BuildingsParameter
+buildings.help = List of buildings selected to plot. Leave blank when to select all. All buildings selected here = a district.
+
 Y-metric-to-plot = end_use
 Y-metric-to-plot.type = ChoiceParameter
 Y-metric-to-plot.choices = end_use, final_use
@@ -1766,41 +1771,36 @@ X-label.nullable = true
 X-label.help = Customise the label for the X-axis
 X-label.category = X-axis settings
 
-buildings =
-buildings.type = BuildingsParameter
-buildings.help = List of buildings selected to plot. Leave blank when to select all.
-buildings.category = Filter by buildings
-
 filter-buildings-by-year-start = 1900
 filter-buildings-by-year-start.type = IntegerParameter
 filter-buildings-by-year-start.nullable = true
 filter-buildings-by-year-start.help = Enforce a filter to further select buildings built in or after this year. Leave blank to ignore the lower bound when filtering by the year of construction.
-filter-buildings-by-year-start.category = Filter by buildings
+filter-buildings-by-year-start.category = Filter by building construction time & type and use type
 
 filter-buildings-by-year-end = 2050
 filter-buildings-by-year-end.type = IntegerParameter
 filter-buildings-by-year-end.nullable = true
 filter-buildings-by-year-end.help = Enforce a filter to further select buildings built in or before this year. Ensure year-end is the same or after year-start. Leave blank to ignore the upper bound when filtering by the year of construction.
-filter-buildings-by-year-end.category = Filter by buildings
+filter-buildings-by-year-end.category = Filter by building construction time & type and use type
 
 filter-buildings-by-construction-type =
 filter-buildings-by-construction-type.type = ColumnMultiChoiceParameter
-filter-buildings-by-construction-type.help = Enforce a filter to further select buildings by one or more construction (arche)types. Leave blank to select all.
+filter-buildings-by-construction-type.help = Enforce a filter to further select buildings by one or more construction_type archetypes. Leave blank to select all.
 filter-buildings-by-construction-type.locator = get_database_archetypes_construction_type
 filter-buildings-by-construction-type.column = const_type
-filter-buildings-by-construction-type.category = Filter by buildings
+filter-buildings-by-construction-type.category = Filter by building construction time & type and use type
 
 filter-buildings-by-use-type =
 filter-buildings-by-use-type.type = ColumnMultiChoiceParameter
-filter-buildings-by-use-type.help = Enforce a filter to further select buildings by one or more use_types (archetypes). For mixed-use buildings, CEA filers by the main use (i.e., the use type with the highest ratio among all use types of a building). Leave blank to select all.
+filter-buildings-by-use-type.help = Enforce a filter to further select buildings by one or more use_type (archetypes). For mixed-use buildings, CEA filers by the main use (i.e., the use type with the highest ratio among all use types of a building). Leave blank to select all.
 filter-buildings-by-use-type.locator = get_database_archetypes_use_type
 filter-buildings-by-use-type.column = use_type
-filter-buildings-by-use-type.category = Filter by buildings
+filter-buildings-by-use-type.category = Filter by building construction time & type and use type
 
 min-ratio-as-main-use = 0
 min-ratio-as-main-use.type= RealParameter
 min-ratio-as-main-use.help= Set the minimum threshold (inclusive) for a use type to be considered as the main use of a building. A valid value ranges from 0 to 1.
-min-ratio-as-main-use.category = Filter by buildings
+min-ratio-as-main-use.category = Filter by building construction time & type and use type
 
 transposed = False
 transposed.type = BooleanParameter
